# MentorsMind-Contract

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  CROSS_CONTRACT_CALLS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  SECURITY.md  SIGNATURE_VALIDATION.md  TIMESTAMP_AUDIT.md  TODO.md  apply_pr_changes.js  apply_pr_changes.py  package.json  plan.md  pnpm-lock.yaml  readme.me
.github/workflows/: benchmarks.yml  state-transition-coverage.yml  stress.yml
benchmarks/: Cargo.toml  README.md  baselines.json
benchmarks/src/: harness.rs  main.rs  report.rs
benchmarks/src/suites/: escrow.rs  governance.rs  mod.rs  staking.rs  timelock.rs
contracts/allowance/src/: lib.rs
contracts/anomaly_detector/src/: lib.rs
contracts/bounty/: Cargo.toml
contracts/bounty/src/: lib.rs
contracts/bounty/test_snapshots/test/: test_claim_after_deadline_panics.1.json  test_claim_bounty.1.json  test_dispute_after_window_panics.1.json  test_dispute_completion.1.json  test_double_claim_panics.1.json  test_multiple_learners_first_verified_wins.1.json  test_post_bounty.1.json  test_refund_after_deadline.1.json  test_refund_before_deadline_panics.1.json  test_ttl_persistence_for_admin_and_count_keys.1.json  test_ttl_renewal_preserves_claim_and_bounty_state.1.json  test_verify_completion_releases_reward.1.json  test_verify_twice_panics.1.json
contracts/delegation/: Cargo.toml
contracts/delegation/src/: lib.rs
contracts/dispute_evidence/: Cargo.toml
contracts/dispute_evidence/src/: lib.rs
contracts/dispute_evidence/test_snapshots/tests/: emits_ordered_dispute_events_with_expected_payloads.1.json  stores_dispute_resolution_once.1.json
contracts/escrow/: INVARIANTS.md
contracts/escrow_factory/: Cargo.toml
contracts/escrow_factory/src/: lib.rs
contracts/forum/: Cargo.toml
contracts/forum/src/: lib.rs
contracts/governance/src/: lib.rs
contracts/governance/test_snapshots/tests/: test_arbitrator_registry_and_selection.1.json  test_cancel_cancelled_proposal_panics.1.json  test_cancel_failed_proposal_panics.1.json  test_double_vote_prevention.1.json  test_execute_call_rejected_if_not_allowlisted.1.json  test_execute_call_succeeds_after_timelock.1.json  test_execute_call_timelock_enforced.1.json  test_execute_call_transitions_to_queued.1.json  (+3 more)
contracts/insurance/src/: lib.rs
contracts/interface_registry/: Cargo.toml
contracts/interface_registry/src/: lib.rs
contracts/kyc_registry/src/: lib.rs  test.rs
contracts/lending_pool/: Cargo.toml
contracts/lending_pool/src/: lib.rs
contracts/mnt-token/: Cargo.toml
contracts/multisig_admin/src/: lib.rs
contracts/oracle/src/: lib.rs  oracle_consumer.rs
contracts/pause_guardian/src/: lib.rs
contracts/payment_router/: Cargo.toml
contracts/payment_router/src/: lib.rs
contracts/rate_limiter/src/: lib.rs
contracts/referral/: Cargo.toml
contracts/referral/src/: lib.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs
contracts/session_registry/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/shared/src/: escrow.rs  events.rs  lib.rs  reentrancy_guard.rs  sig_validation.rs  state_machine.rs  storage.rs  ttl_utils.rs
contracts/snapshot/: Cargo.toml
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs
contracts/streak_rewards/src/: lib.rs
contracts/subscription/: Cargo.toml
contracts/subscription/src/: lib.rs
contracts/subscription_analytics/src/: lib.rs
contracts/timelock/src/: lib.rs
contracts/treasury/: Cargo.toml
contracts/treasury/src/: lib.rs
contracts/treasury_analytics/: Cargo.toml  README.md
contracts/treasury_analytics/src/: lib.rs
contracts/upgrade_registry/src/: lib.rs
contracts/velocity_limits/src/: lib.rs
contracts/verification/: Cargo.toml
contracts/verification/src/: lib.rs
contracts/vesting/: Cargo.toml
contracts/vesting/src/: lib.rs
docs/: API.md  DEPLOYMENT_GUIDE.md  ERRORS.md  EVENTS.md  FAQ.md  FEATURES.md  INTEGRATION_GUIDE.md  MAINTENANCE.md  MONITORING.md  OPTIMIZATION.md  RUNBOOKS.md  STATE_MACHINE.md  STATE_TRANSITION_COVERAGE_ANALYZER.md  TESTING.md  TROUBLESHOOTING.md  TYPES.md  UPGRADE_GUIDE.md  events.md  flash_loan_protection.md  security-audit-checklist.md  storage-layout-audit.md  upgrade-path.md
docs/diagrams/: README.md  contract_relationships.mmd  data_flow.mmd  deployment_architecture.mmd  state_machine.mmd  system_architecture.mmd
escrow/: Cargo.toml
escrow/src/: lib.rs
escrow/tests/: escrow_test.rs
mentorminds-backend/: package.json
mentorminds-backend/migrations/: 035_add_booking_id_to_escrows.sql
mentorminds-backend/src/: index.ts
mentorminds-backend/src/controllers/: escrow.controller.ts  walletActivation.controller.ts
mentorminds-backend/src/middleware/: api-versioning.middleware.ts  rateLimit.middleware.ts
mentorminds-backend/src/routes/: walletActivation.routes.ts
mentorminds-backend/src/services/: assetExchange.service.ts  audit-log.service.ts  audit-logger.service.ts  compliance-reporting.service.ts  escrow-api.service.ts  sorobanEscrow.service.ts
mentorminds-backend/src/utils/: pagination.utils.ts  zero-downtime-migration.ts
mentorminds-backend/tests/: api-versioning.test.ts  compliance-reporting.test.ts  pagination.utils.test.ts  walletActivation.test.ts  zero-downtime-migration.test.ts
multisig/: Cargo.toml
scripts/: analyze-state-transitions.sh  audit_toolkit.py  check-benchmarks.sh  check_duplicate_writes.py  deploy.sh  rollback.sh  stress_test.sh  upgrade.sh  verify-upgrade.sh
tests/: Cargo.toml  README.md  fee_precision_tests.rs  flash_loan_tests.rs  lib.rs  malicious_token_tests.rs  oracle_manipulation_tests.rs  sig_validation_tests.rs  state_machine_tests.rs  upgrade_safety_tests.rs  upgrade_test.rs
tests/cancellation/: mod.rs
tests/events/: README.md  event_ordering_matrix.md
tests/fees/: mod.rs
tests/multi_mentor/: mod.rs
tests/partial_release/: mod.rs
tests/refund/: mod.rs
tests/stress/: runner.py
tests/token_approval/: mod.rs
tests/ttl/: README.md  ttl_cases.md
tools/: Cargo.toml
tools/src/: lib.rs  main.rs
(+55 files in other folders)
