[workspace]
resolver = "2"
members = [
    "escrow",
    "tests",
    "contracts/allowance",
    "contracts/bridge_receiver",
    "contracts/credit_score",
    "contracts/escrow_factory",
    "contracts/forum",
    "contracts/governance",
    "contracts/interface_registry",
    "contracts/kyc_registry",
    "contracts/mnt-token",
    "contracts/oracle",
    "contracts/payment_router",
    "contracts/referral",
    "contracts/reputation",
    "contracts/session_nft",
    "contracts/shared",
    "contracts/staking",
    "contracts/streak_rewards",
    "contracts/subscription_analytics",
    "contracts/timelock",
    "contracts/treasury",
    "contracts/verification",
    "contracts/vesting",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
soroban-sdk = "21.7.0"
soroban-token-sdk = "21.7.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
