[workspace]
resolver = "2"
members = [
    "escrow",
    "multisig",
    "contracts/allowance",
    "contracts/anomaly_detector",
    "contracts/badges",
    "contracts/bounty",
    "contracts/bridge_receiver",
    "contracts/cert_showcase",
    "contracts/certificates",
    "contracts/collateral_loan",
    "contracts/credit_score",
    "contracts/delegation",
    "contracts/dispute_evidence",
    "contracts/endorsements",
    "contracts/escrow_factory",
    "contracts/forum",
    "contracts/governance",
    "contracts/health_dashboard",
    "contracts/insurance",
    "contracts/interface_registry",
    "contracts/isa",
    "contracts/kyc_registry",
    "contracts/lending_pool",
    "contracts/mnt-token",
    "contracts/multisig_admin",
    "contracts/oracle",
    "contracts/pause_guardian",
    "contracts/payment_router",
    "contracts/performance_bond",
    "contracts/prediction_market",
    "contracts/proposal_templates",
    "contracts/rate_limiter",
    "contracts/rbac",
    "contracts/referral",
    "contracts/referral_leaderboard",
    "contracts/regulatory_reporting",
    "contracts/reputation",
    "contracts/sanctions",
    "contracts/session_nft",
    "contracts/session_oracle",
    "contracts/session_registry",
    "contracts/shared",
    "contracts/snapshot",
    "contracts/staking",
    "contracts/streak_rewards",
    "contracts/subscription",
    "contracts/subscription_analytics",
    "contracts/timelock",
    "contracts/treasury",
    "contracts/upgrade_registry",
    "contracts/velocity_limits",
    "contracts/verification",
    "contracts/vesting",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
