[package]
name = "mentorminds-integration-tests"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
name = "mentorminds_integration_tests"
path = "lib.rs"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
mentorminds-escrow = { path = "../escrow", features = ["testutils"] }
mentorminds-verification = { path = "../contracts/verification", features = ["testutils"] }
shared = { path = "../contracts/shared" }
mentorminds-governance = { path = "../contracts/governance", features = ["testutils"] }
mentorminds-oracle = { path = "../contracts/oracle", features = ["testutils"] }
mentorminds-reputation = { path = "../contracts/reputation", features = ["testutils"] }
mentorminds-timelock = { path = "../contracts/timelock", features = ["testutils"] }
mentorminds-credit-score = { path = "../contracts/credit_score", features = ["testutils"] }
mentorminds-staking = { path = "../contracts/staking", features = ["testutils"] }
mentorminds-lending-pool = { path = "../contracts/lending_pool", features = ["testutils"] }
mentorminds-upgrade-registry = { path = "../contracts/upgrade_registry", features = ["testutils"] }
mentorminds-pause-guardian = { path = "../contracts/pause_guardian", features = ["testutils"] }
mentorminds-dispute-evidence = { path = "../contracts/dispute_evidence", features = ["testutils"] }
mentorminds-referral = { path = "../contracts/referral", features = ["testutils"] }
mentorminds-payment-router = { path = "../contracts/payment_router", features = ["testutils"] }

[dev-dependencies]

[[test]]
name = "upgrade_test"
path = "upgrade_test.rs"

[[test]]
name = "integration_test"
path = "integration_test.rs"

[[test]]
name = "state_machine_tests"
path = "state_machine_tests.rs"

[[test]]
name = "economic_attacks"
path = "economic_attacks.rs"

[[test]]
name = "flash_loan_tests"
path = "flash_loan_tests.rs"

[[test]]
name = "oracle_manipulation_tests"
path = "oracle_manipulation_tests.rs"

[[test]]
name = "sig_validation_tests"
path = "sig_validation_tests.rs"

[[test]]
name = "cancellation_tests"
path = "cancellation/mod.rs"

[[test]]
name = "multi_mentor_tests"
path = "multi_mentor/mod.rs"

[[test]]
name = "fee_precision_tests"
path = "fee_precision_tests.rs"

[[test]]
name = "upgrade_safety_tests"
path = "upgrade_safety_tests.rs"
